--- a/MusicStore/Language/English.xaml
+++ b/MusicStore/Language/English.xaml
@@ -20,9 +20,11 @@
     <TextBlock x:Key="applybtn" Text="Apply changes"/>
     <TextBlock x:Key="librarybtn" Text="Library"/>
     <TextBlock x:Key="shopbtn" Text="Shop"/>
-    <TextBlock x:Key="optionbtn" Text="Option"/>
+    <TextBlock x:Key="optionbtn" Text="Options"/>
     <s:String x:Key="USER">User: </s:String>
     <s:String x:Key="USERTYPE">User type: </s:String>
-    <s:String x:Key="AVAIBLEFUNDS">Avaible funds: </s:String>
+    <s:String x:Key="AVAIBLEFUNDS">Available funds: </s:String>
     <TextBlock x:Key="logoutbtn" Text="Log out"/>
+    <TextBlock x:Key="changestylebtn" Text="Change Style"/>
+    <TextBlock x:Key="changelanbtn" Text="Change Language"/>
 </ResourceDictionary>
