--- a/MusicStore/Language/Chinese.xaml
+++ b/MusicStore/Language/Chinese.xaml
@@ -25,4 +25,6 @@
     <s:String x:Key="USERTYPE">用户类型: </s:String>
     <s:String x:Key="AVAIBLEFUNDS">可用资金: </s:String>
     <TextBlock x:Key="logoutbtn" Text="登出"/>
+    <TextBlock x:Key="changestylebtn" Text="改变风格"/>
+    <TextBlock x:Key="changelanbtn" Text="改变语言"/>
 </ResourceDictionary>
