--- a/MusicStore/Pages/Options.xaml
+++ b/MusicStore/Pages/Options.xaml
@@ -7,10 +7,176 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Options">
-
+    <Page.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="CheckBox">
+                        <StackPanel>
+                            <Grid>
+                                <Border Width="60"
+                                        Height="30"
+                                        CornerRadius="15"
+                                        >
+                                    <Border.Background>
+                                        <LinearGradientBrush StartPoint="0,1" EndPoint="1,1" GradientStops="{DynamicResource checkbox}">
+                                        </LinearGradientBrush>
+                                    </Border.Background>
+                                </Border>
+                                <Border x:Name="buttoncheck"
+                                        Width="30"
+                                        Height="30"
+                                        CornerRadius="15"
+                                        HorizontalAlignment="Left">
+                                </Border>
+                            </Grid>
+                            <ContentPresenter x:Name="ContentP"
+                                              Content="{TemplateBinding Content}"
+                                              VerticalAlignment="Center"/>
+                        </StackPanel>
+                        <ControlTemplate.Resources>
+                            <Storyboard x:Key="right">
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin"
+                                                    Storyboard.TargetName="buttoncheck"
+                                                    Duration="0:0:0:4"
+                                                    From="0,0,0,0"
+                                                    To="28,0,0,0">
+                                    <ThicknessAnimation.EasingFunction>
+                                        <CircleEase EasingMode="EaseOut">
+                                        </CircleEase>
+                                    </ThicknessAnimation.EasingFunction>
+                                </ThicknessAnimation>
+                            </Storyboard>
+                            <Storyboard x:Key="left">
+                                <ThicknessAnimation Storyboard.TargetProperty="Margin"
+                                                    Storyboard.TargetName="buttoncheck"
+                                                    Duration="0:0:0:4"
+                                                    From="28,0,0,0"
+                                                    To="0,0,0,0">
+                                    <ThicknessAnimation.EasingFunction>
+                                        <CircleEase EasingMode="EaseOut">
+                                        </CircleEase>
+                                    </ThicknessAnimation.EasingFunction>
+                                </ThicknessAnimation>
+                            </Storyboard>
+                        </ControlTemplate.Resources>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsChecked" Value="False">
+                                <Trigger.ExitActions>
+                                    <RemoveStoryboard BeginStoryboardName="left">
+                                    </RemoveStoryboard>
+                                    <BeginStoryboard Storyboard="{StaticResource right}" x:Name="rightt">
+                                    </BeginStoryboard>
+                                </Trigger.ExitActions>
+                                <Setter TargetName="buttoncheck"
+                                        Property="Background"
+                                        Value="MediumPurple">
+                                </Setter>
+                            </Trigger>
+                            <Trigger Property="IsChecked" Value="True">
+                                <Trigger.ExitActions>
+                                    <RemoveStoryboard BeginStoryboardName="right">
+                                    </RemoveStoryboard>
+                                    <BeginStoryboard Storyboard="{StaticResource left}" x:Name="leftt">
+                                    </BeginStoryboard>
+                                </Trigger.ExitActions>
+                                <Setter TargetName="buttoncheck"
+                                        Property="Background"
+                                        Value="Green ">
+                                </Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
     <Grid>
-        <CheckBox Content="Tryb ciemny" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="CheckBox_Checked" IsChecked="True"/>
-        <ComboBox x:Name="jezykbox" Text="Wybierz język" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" Width="265" Height="36" SelectionChanged="Jezykbox_SelectionChanged"/>
-        <Label Content="Wybierz język" HorizontalAlignment="Left" Margin="10,54,0,0" VerticalAlignment="Top"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="0.02*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="4*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="0.02*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="4*"/>
+        </Grid.RowDefinitions>
+        <CheckBox
+                  HorizontalAlignment="Center" 
+                  Foreground="{DynamicResource napisy}" 
+                  Margin="10,10,0,0" 
+                  VerticalAlignment="Center" 
+                  Click="CheckBox_Checked" 
+                  IsChecked="True"
+                  Grid.Column="2"
+                  Grid.Row="0">
+        
+        </CheckBox>
+        <Border Grid.Row="0"
+                Grid.Column="1">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="1,1" EndPoint="1,0" GradientStops="{DynamicResource pas}">
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+        <Border Grid.Row="2"
+                Grid.Column="1">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="1,0" EndPoint="1,1" GradientStops="{DynamicResource pas}">
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+        <Border Grid.Row="1"
+                Grid.Column="1"
+                Background="{DynamicResource paski}"
+                BorderThickness="6"
+                BorderBrush="{DynamicResource paski}">
+        </Border>
+        <Border Grid.Row="1"
+                Grid.Column="0">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="1,1" EndPoint="0,1" GradientStops="{DynamicResource pas}">
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+        <Border Grid.Row="1"
+                Grid.Column="2">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="1,1" GradientStops="{DynamicResource pas}">
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+        
+        
+                <ComboBox x:Name="jezykbox" 
+                  Text="Wybierz język" 
+                  HorizontalAlignment="Center"  
+                  VerticalAlignment="Center" 
+                  Width="245" 
+                  Height="36" 
+                  SelectionChanged="Jezykbox_SelectionChanged"
+                  Grid.Row="2"
+                  Grid.Column="2"
+                  />
+        
+        <Label Content="{DynamicResource changelanbtn}" 
+               HorizontalAlignment="Center" 
+               Foreground="{DynamicResource napisy}" 
+               VerticalAlignment="Center"
+               Grid.Row="2"
+               Grid.Column="0"
+               FontFamily="InriaSans-Light"
+               FontSize="15"/>
+        <Label Content="{DynamicResource changestylebtn}" 
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Foreground="{DynamicResource napisy}" 
+               Grid.Row="0"
+               Grid.Column="0"
+               FontFamily="InriaSans-Light"
+               FontSize="15"/>
     </Grid>
 </Page>
