--- a/MusicStore/Pages/AdminSettings.xaml
+++ b/MusicStore/Pages/AdminSettings.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MusicStore.Pages.Shop"
+﻿<Page x:Class="MusicStore.Pages.AdminSettings"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,9 @@
       xmlns:local="clr-namespace:MusicStore.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Shop">
+      Title="AdminSettings">
 
     <Grid>
-        <Button Width="200" Height="50">asdf</Button>
+        
     </Grid>
 </Page>
