--- a/MusicStore/Style/Lightmode.xaml
+++ b/MusicStore/Style/Lightmode.xaml
@@ -11,7 +11,13 @@
         <GradientStop Offset="0.66" Color="MediumPurple"/>
         <GradientStop Offset="1" Color="MediumVioletRed"/>
     </GradientStopCollection>
-    
+
+    <GradientStopCollection x:Key="ramaWybrana">
+        <GradientStop Offset="0" Color="#FF4E0505"/>
+        <GradientStop Offset="0.66" Color="Maroon"/>
+        <GradientStop Offset="1" Color="Red"/>
+    </GradientStopCollection>
+
     <GradientStopCollection x:Key="pas">
         <GradientStop Offset="0" Color="MediumPurple"/>
         <GradientStop Offset="1" Color="Transparent"/>
