--- a/MusicStore/MainMenu.xaml
+++ b/MusicStore/MainMenu.xaml
@@ -114,10 +114,10 @@
                                     </Grid.RowDefinitions>
 
 
-                                    <TextBlock x:Name="UsernameTextBlock" Foreground="{DynamicResource napisy}" Grid.Row="0" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Username" />
-                                    <TextBlock x:Name="UsertypeTextBlock" Foreground="{DynamicResource napisy}" Grid.Row="1" FontSize="15" HorizontalAlignment="Center" VerticalAlignment="top" Text="Usertype" />
-                                    <TextBlock x:Name="UserFundsText" Foreground="{DynamicResource napisy}" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{DynamicResource AVAIBLEFUNDS}" FontWeight="Bold" />
-                                    <TextBlock x:Name="UserFundsTextBlock" Foreground="{DynamicResource napisy}" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Top" Text="Funds" />
+                                    <TextBlock x:Name="UsernameTextBlock" Foreground="{DynamicResource napisy}" FontSize="24" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Bottom" Text="Username" Width="173" />
+                                    <TextBlock x:Name="UsertypeTextBlock" Foreground="{DynamicResource napisy}" FontSize="13" HorizontalAlignment="Left" VerticalAlignment="Top" Text="Usertype" FontStyle="Italic" Margin="0,30,0,0" Grid.RowSpan="2" />
+                                    <TextBlock x:Name="UserFundsText" Foreground="{DynamicResource napisy}" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Text="{DynamicResource AVAIBLEFUNDS}" FontWeight="Bold" Margin="72,0,0,0" />
+                                    <TextBlock x:Name="UserFundsTextBlock" Foreground="{DynamicResource napisy}" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Top" Text="Funds" Margin="0,30,10,0" Grid.RowSpan="2" />
                                 </Grid>
                             </Grid>
                         </Border>
