Track Manager Base Functionality
Fully working layout for Track Manager both for editing and creating new track

Missing features to finish:
- Setting default cover image on "Remove Image"
- Dynamic spawning of author combo box
- Storing Track File information for later Database functionality

Current bugs:
- Shop price textblock allows for letters if they aren't placed at the end of the string

--- a/MusicStore/Pages/Library.xaml
+++ b/MusicStore/Pages/Library.xaml
@@ -21,7 +21,7 @@
         </Grid.ColumnDefinitions>
         <!--Admin Panel-->
         <StackPanel x:Name="AdminStackPanel" Orientation="Horizontal" Grid.Row="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Button Content="Add new Track"/>
+            <Button Content="Add new Track" Click="AddNewTrack_Click"/>
             <Button Content="Add new Album"/>
             <Button Content="Add new Artist"/>
             <Separator Width="25"/>
