--- a/MusicStore/TrackManager.xaml
+++ b/MusicStore/TrackManager.xaml
@@ -23,7 +23,11 @@
                         <ColumnDefinition Width="7.75*"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="*Track Name: " Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                    <TextBox x:Name="TrackNameTextBox" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+                    <DockPanel Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Center">
+                        <Button x:Name="RestoreTrackNameButton" Content="Restore Track Name" Margin="0,0,25,0" Click="RestoreTrackName_Click"/>
+                        <TextBox x:Name="TrackNameTextBox" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+                    </DockPanel>
+                    
                 </Grid>
                 <Separator Height="10"/>
                 <!--Track Image-->
@@ -33,22 +37,25 @@
                         <ColumnDefinition Width="0.5*"/>
                         <ColumnDefinition Width="7.75*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Cover Image: " Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                    <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="0">
+                        <TextBlock Text="Cover Image: " HorizontalAlignment="Right"/>
+                        <TextBlock Text="[Supported files: .jpg / .jpeg / .png]" FontStyle="Italic" FontSize="10"/>
+                    </StackPanel>
                     <Grid Grid.Column="2" x:Name="CoverImageGrid">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/> <!--If creating new Width="0*"-->
+                            <ColumnDefinition Width="1*" x:Name="RestorePreviousImageColumn"/> <!--If creating new Width="0*"-->
                             <ColumnDefinition Width="1*"/>
                             <ColumnDefinition Width="1*"/>
                         </Grid.ColumnDefinitions>
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Remove Image" Grid.Column="0"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Remove Image" Grid.Column="0" Click="SetDefaultCoverImage_Click"/>
                         <!--Button below is only visible when window works in edit mode [Loaded song ID exists]-->
-                        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Restore Previous Image" Grid.Column="1"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Restore Previous Image" Grid.Column="1" Click="RestoreCoverImage_Click"/>
                         <StackPanel Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Select File"/>
-                            <StackPanel x:Name="CoverImageLoadedFileStackPanel" Visibility="Collapsed">
+                            <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Select File" Click="SelectFile_Click"/>
+                            <StackPanel x:Name="CoverImageLoadedFileStackPanel" Visibility="Visible">
                                 <Separator Height="5" Opacity="0"/>
-                                <TextBlock HorizontalAlignment="Center" Text="[Loaded File]"/>
+                                <TextBlock HorizontalAlignment="Center" Text="" x:Name="CoverImageFileTextBlock"/>
                             </StackPanel>
                         </StackPanel>
                         <Image x:Name="CoverPreviewImage" Grid.Column="3" Source="obrazy/note-gb4fa8b680_640.png" VerticalAlignment="Center" HorizontalAlignment="Center" Height="108" Width="108"/>
@@ -66,7 +73,8 @@
                         <TextBlock Text="*Authors: " VerticalAlignment="Center" HorizontalAlignment="Right"/>
                         <Separator Height="5" Opacity="0"/>
                         <!--Pressing Button below opens new Author Manager window for adding new Author to database, after creation automatically adds to the list of artist to the right-->
-                        <Button Content="Add new Author" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                        <Button Content="Add new Author" VerticalAlignment="Center" HorizontalAlignment="Right" Click="AddNewAuthor_Click"/>
+                        <Button Content="Restore Authors" Margin="0,10,0,0" x:Name="RestoreAuthorsButton" Click="RestoreAuthors_Click"/>
                     </StackPanel>
                     <StackPanel x:Name="AuthorsStackPanel" Grid.Column="2">
                         <Grid Margin="0,5">
@@ -101,7 +109,7 @@
                                 <ColumnDefinition Width="1*"/>
                                 <ColumnDefinition Width="9*"/>
                             </Grid.ColumnDefinitions>
-                            <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Content="-" Height="27" Width="27"/>
+                            <Button VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Content="-" Height="27" Width="27" Click="RemoveAuthorFromList_Click"/>
                             <ComboBox Grid.Column="1" x:Name="ComboBox_X">
                                 <ComboBoxItem IsSelected="True">
                                     <DockPanel>
@@ -126,13 +134,79 @@
                                 <ColumnDefinition Width="9*"/>
                             </Grid.ColumnDefinitions>
                             <!--Clicking button below creates new ComboBox Grid with list of Artists from example above-->
-                            <Button x:Name="AddAuthorButton" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Content="+" Height="27" Width="27" Margin="0,5"/>
+                            <Button x:Name="AddAuthorButton" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Content="+" Height="27" Width="27" Margin="0,5" Click="AddAuthorToList_Click"/>
                         </Grid>
                     </StackPanel>
                 </Grid>
                 <Separator Height="10"/>
+                
+                <!--File Import-->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1.75*"/>
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition Width="7.75*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center">
+                        <TextBlock Text="*Track File: " HorizontalAlignment="Right"/>
+                        <TextBlock Text="[Supported files: .mp3]" FontStyle="Italic" FontSize="10"/>
+                    </StackPanel>
+                    <Grid Grid.Column="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*" x:Name="RestoreFilePathColumn"/>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Clear File Path" Grid.Column="0" Click="ClearFilePath_Click"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Restore File Path" Grid.Column="1" Click="RestoreFilePath_Click"/>
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Select File" Grid.Column="2" Click="SelectTrackFile_Click"/>
+                        <StackPanel Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <TextBlock HorizontalAlignment="Center" Text="Selected File" FontWeight="Bold" />
+                            <StackPanel x:Name="LoadedFileStackPanel" Visibility="Visible">
+                                <Separator Height="5" Opacity="0"/>
+                                <TextBlock HorizontalAlignment="Center" Text="" x:Name="SelectedFileTextBlock"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Grid>
+                </Grid>
+                <Separator Height="10"/>
+                
+                <!--Shop Price-->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1.75*"/>
+                        <ColumnDefinition Width="0.5*"/>
+                        <ColumnDefinition Width="7.75*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center">
+                        <TextBlock Text="*Shop Price: " HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                        <TextBlock Text="[Allowed format: XX.XX / XX]" FontStyle="Italic" FontSize="10"/>
+                    </StackPanel>
+                    <DockPanel Grid.Column="2">
+                        <Button VerticalAlignment="Center" HorizontalAlignment="Center" Content="Restore Price" x:Name="RestorePriceButton" Margin="0,0,25,0" Click="RestorePrice_Click"/>
+                        <TextBox x:Name="ShopPriceTextBox" Grid.Column="2" VerticalAlignment="Center" MinWidth="35" Text="" TextChanged="ShopPriceTextBox_TextChanged"/>
+                        <TextBlock Text=" PLN" VerticalAlignment="Center"/>
+                    </DockPanel>
+                </Grid>
+                <Separator Height="10"/>
+                               
             </StackPanel>
         </ScrollViewer>
-
+        <!--Confirmation Buttons-->
+        <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="1" Margin="17.1,0">
+            <Grid.ColumnDefinitions>
+                <!--Column Definition 0 & 1 = "0*" when creating a new Track-->
+                <ColumnDefinition Width="1*" x:Name="ResetChangesRow"/>
+                <ColumnDefinition Width="1*" x:Name="SaveAsNewTrackRow"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" Margin="25,0" Content="Reset Changes" Click="ResetChanges_Click"/>
+            <Button Grid.Column="1" Margin="25,0" Content="Save as New Track" Click="SaveAsNewTrack_Click"/>
+            <!--Button 2 Content= {When editing track = "Save Changes" / When creating new Track = "Add New Track"}-->
+            <Button Grid.Column="2" Margin="25,0" Content="Save Changes" x:Name="SaveChangesButton" Click="SaveChanges_Click"/>
+            <Button Grid.Column="3" Margin="25,0" Content="Cancel" Click="Cancel_Click"/>
+        </Grid>
     </Grid>
 </Window>
