no pare zmian jest
- wylogowywanie
- zapis stylu i jezyka ostanich w bazie dla kazdego uzytkownika osobno
- mozliwosc usuniecia swojego konta
- mozliwosc rezygnacj z uprawnien administratora (trzeba wskazac kogos innego)
- zarzadzanie uprawnieniami - odbieranie i nadawanie administratora
- fix do zmiany profilowego

--- a/MusicStore/MainMenu.xaml
+++ b/MusicStore/MainMenu.xaml
@@ -274,7 +274,7 @@
                                Foreground="White"
                                FontFamily="InriaSans-Light"
                                Cursor="Hand"
-                               Click="Btnopcje_Click"
+                               Click="btnlogout_Click"
                                Margin="0,0,0,0"
                                Style="{DynamicResource button2}"   
                                Grid.Row="7">
