--- a/MusicStore/Pages/AccountSettings.xaml
+++ b/MusicStore/Pages/AccountSettings.xaml
@@ -9,10 +9,113 @@
       Title="AccountSettings">
 
     <Grid>
-        <Image HorizontalAlignment="Right" Height="128" Margin="0,10,662,0" VerticalAlignment="Top" Width="128" Source="../obrazy/logo.png"/>
-        <TextBlock x:Name="UsertypeTextBlock" Foreground="{DynamicResource napisy}" Margin="0,147,662,0" FontSize="13" HorizontalAlignment="Right" VerticalAlignment="Top" Text="Zmień profilowe" Width="128" />
+        <Image x:Name="pfp" HorizontalAlignment="Left" Height="128" Margin="10,10,0,0" VerticalAlignment="Top" Width="128" Source="../obrazy/logo.png"/>
+        <TextBlock x:Name="UsertypeTextBlock" Foreground="{DynamicResource napisy}" Margin="10,147,0,0" FontSize="13" HorizontalAlignment="Left" VerticalAlignment="Top" Text="Zmień profilowe" Width="128" />
 
-        <ComboBox x:Name="pictureCombo" HorizontalAlignment="Right" Margin="0,164,662,0" VerticalAlignment="Top" Width="128" SelectionChanged="pictureCombo_SelectionChanged"/>
-
+        <ComboBox x:Name="pictureCombo" HorizontalAlignment="Left" Margin="10,164,0,0" VerticalAlignment="Top" Width="128" SelectionChanged="pictureCombo_SelectionChanged"/>
+        <Button    x:Name="btnusun"
+                               Content="Usuń konto"
+                               FontSize="16"
+                               BorderThickness="5,5,5,5"
+                               Foreground="White"
+                               FontFamily="InriaSans-Light"
+                               Cursor="Hand"
+                               Click="btnusun_Click"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Bottom"
+                               Margin="10,0,0,64"
+                               Style="{DynamicResource button1}"       
+                        >
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Width="102"
+                                        Height="30"
+                                        CornerRadius="5"
+                                        Background="{TemplateBinding Background}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <Button    x:Name="btnwyloguj"
+                               Content="Wyloguj się"
+                               FontSize="16"
+                               BorderThickness="5,5,5,5"
+                               Foreground="White"
+                               FontFamily="InriaSans-Light"
+                               Cursor="Hand"
+                               Click="btnwyloguj_Click"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Bottom"
+                               Margin="10,0,0,15"
+                               Style="{DynamicResource button1}"       
+                        >
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Width="102"
+                                        Height="30"
+                                        CornerRadius="5"
+                                        Background="{TemplateBinding Background}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <Border x:Name="AdminSettingsBorder" BorderBrush="Black" BorderThickness="1" Width="390" HorizontalAlignment="Left" Margin="400,10,0,10">
+            <Grid>
+                <Button    x:Name="btnzrezygnuj"
+                               Content="Zrezygnuj z uprawnien administratora"
+                               FontSize="16"
+                               BorderThickness="5,5,5,5"
+                               Foreground="White"
+                               FontFamily="InriaSans-Light"
+                               Cursor="Hand"
+                               Click="btnzrezygnuj_Click"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Top"
+                               Margin="0,10,0,0"
+                               Style="{DynamicResource button1}"       
+                        >
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="282"
+                                        Height="30"
+                                        CornerRadius="5"
+                                        Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <Button    x:Name="btnnadaj"
+                               Content="Edytuj uprawnienia"
+                               FontSize="16"
+                               BorderThickness="5,5,5,5"
+                               Foreground="White"
+                               FontFamily="InriaSans-Light"
+                               Cursor="Hand"
+                               Click="btnnadaj_Click"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Top"
+                               Margin="0,60,0,0"
+                               Style="{DynamicResource button1}"       
+                        >
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="148"
+                                        Height="30"
+                                        CornerRadius="5"
+                                        Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+            </Grid>
+        </Border>
     </Grid>
 </Page>
